Added css folder, css file and new index file

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JavaScript Sandbox: Section2</title>
+  <meta charset="utf-8">
+  <title>Bacon Fansite</title>
 </head>
+
 <body>
-  <h1>JavaScript Sandbox: Section 2</h1>
-  <script src="app.js"></script>
+  <h1>I Love Bacon</h1>
+  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
+  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
+  <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
+  <img src="https://emojipedia-us.s3.amazonaws.com/thumbs/240/apple/118/bacon_1f953.png" alt="bacon-img">
 </body>
+
 </html>
