--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <title>Chad Reynolds</title>
 </head>
 <body>
-    
+    <div class='top'>
+      <h1>I'm Chad.</h1>
+      <p>Web Developer and Junior Programmer</p>
+    </div>
+    <div class='middle'>
+
+    </div>
+    <div class='bottom'>
+
+    </div>
 </body>
 </html>
