Updated styles.css file

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>Chad Reynolds</title>
 </head>
 <body>
-    <div class='top'>
+    <div class="top-container">
       <h1>I'm Chad.</h1>
       <p>Web Developer and Junior Programmer</p>
     </div>
-    <div class='middle'>
-
+    <div class="middle-container">
+      
     </div>
-    <div class='bottom'>
-
+    <div class="bottom-container">
+     
     </div>
 </body>
 </html>
