edited styles.cc file

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="top-container">
-      <img src="./photos/cloud.png" alt="Cloud">
+      <img id="top_cloud" src="./photos/cloud.png" alt="Cloud">
       <h1>I'm Chad.</h1>
       <p>Web Developer and Junior Programmer</p>
-      <img src="./photos/cloud.png" alt="Cloud">
+      <img id="bottom-cloud" src="./photos/cloud.png" alt="Cloud">
       <img src="./photos/mountain.png" alt="Mountain Image">
     </div>
     <div class="middle-container">
