Updated both css and html file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="top-container">
       <img id="top_cloud" src="./photos/cloud.png" alt="Cloud">
-      <h1>I'm Chad.</h1>
+      <h1><em>I'm Chad.</em></h1>
       <p>Web Developer and Junior Programmer</p>
       <img id="bottom-cloud" src="./photos/cloud.png" alt="Cloud">
       <img src="./photos/mountain.png" alt="Mountain Image">
