Updated both styles and index file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="middle-container">
       <div class="profile">
         <img id="me" src="./photos/chad.png" alt="Picture of me">
-        <h2>Hello.</h2>
+        <h2>Hello World!</h2>
         <p>I am IT Support Specialist training in Web Development.</p>
       </div>
       <hr>
@@ -31,12 +31,12 @@
         <div class="skill-row">
           <img class="penguin" src="./photos/linux.png" alt="Linux Pengquin">
           <h3>Linux Enthusiast</h3>
-          <p>Enjoy building and configuring linux systems.</p>
+          <p>I started getting into Linux 5 years ago. The thought of a community coming together to create <br> and provide free software for everyone just blows my mind.</p>
         </div>
         <div class="skill-row">
           <img class="www" src="./photos/world-wide-web.png" alt="www symbol">
           <h3>Website Development</h3>
-          <p>Web Developer in the making.</p>
+          <p>Web Development is something that I find very appealing and want to learn as much as I can<br> to continue to better my skills and knowledge in this field.</p>
         </div>
       </div>
       <hr>
