updated html and css file

--- a/index.html
+++ b/index.html
@@ -1,61 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="./favicon.ico?v=2">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?  family=Merriweather&display=swap" rel="stylesheet">   
-    <title>Chad Reynolds</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="icon" href="./favicon.ico?v=2">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?  family=Merriweather&display=swap" rel="stylesheet">
+  <title>Chad Reynolds</title>
 </head>
+
 <body>
-    <div class="top-container">
-      <img id="top_cloud" src="./photos/cloud.png" alt="Cloud">
-      <h1><em>I'm Chad.</em></h1>
-      <p>Web Developer and Junior Programmer</p>
-      <img id="bottom-cloud" src="./photos/cloud.png" alt="Cloud">
-      <img src="./photos/mountain.png" alt="Mountain Image">
+  <div class="top-container">
+    <img id="top_cloud" src="./photos/cloud.png" alt="Cloud">
+    <h1><em>I'm Chad.</em></h1>
+    <p>Web Developer and Junior Programmer</p>
+    <img id="bottom-cloud" src="./photos/cloud.png" alt="Cloud">
+    <img src="./photos/mountain.png" alt="Mountain Image">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="me" src="./photos/chad.png" alt="Picture of me">
+      <h2>Hello World!</h2>
+      <p>I am IT Support Specialist training in Web Development.</p>
     </div>
-    <div class="middle-container">
-      <div class="profile">
-        <img id="me" src="./photos/chad.png" alt="Picture of me">
-        <h2>Hello World!</h2>
-        <p>I am IT Support Specialist training in Web Development.</p>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="penguin" src="./photos/linux.png" alt="Linux Pengquin">
+        <h3>Linux Enthusiast</h3>
+        <p class="code-skill-description">I started getting into Linux 5 years ago. The thought of a community coming together to create <br> and provide free software for everyone just blows my mind.</p>
       </div>
-      <hr>
-      <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img class="penguin" src="./photos/linux.png" alt="Linux Pengquin">
-          <h3>Linux Enthusiast</h3>
-          <p class="code-skill-description">I started getting into Linux 5 years ago. The thought of a community coming together to create <br> and provide free software for everyone just blows my mind.</p>
-        </div>
-        <div class="skill-row">
-          <img class="www" src="./photos/world-wide-web.png" alt="www symbol">
-          <h3>Website Development</h3>
-          <p class="www-skill-description">Web Development is something that I find very appealing and want to learn as much as I can<br> to continue to better my skills and knowledge in this field.</p>
-        </div>
-      </div>
-      <br>
-      <div class="contact-me">
-        <hr>
-        <h2>Get In Touch</h2>
-        <h3>You can reach me via the links below:</h3>
-        <a class="btn" href="mailto:c.reynolds0108@proton.me">CONTACT ME</a>
+      <div class="skill-row">
+        <img class="www" src="./photos/world-wide-web.png" alt="www symbol">
+        <h3>Website Development</h3>
+        <p class="www-skill-description">Web Development is something that I find very appealing and want to learn as much as I can<br> to continue to better my skills and knowledge in this field.</p>
       </div>
     </div>
     <br>
-    
-    <div class="bottom-container">
-      <a class="footer-link" href="www.linkedin.com/in/chad-reynolds-bbaa6a226">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/C_Reynolds0108">Twitter</a>
-      <a class="footer-link" href="https://github.com/creynolds0108">GitHub</a><br> 
-      <label for="attributes">Attributes:</label><br>
-      <a href="https://www.flaticon.com/free-icons/linux" title="linux icons">Linux icons created by Freepik - Flaticon</a><br>
-      <a href="https://www.flaticon.com/free-icons/www" title="www icons">Www icons created by Freepik - Flaticon</a>
-      <p class="copywrite">©2022 Chad Reynolds.</p>
+    <div class="contact-me">
+      <hr>
+      <h2>Get In Touch</h2>
+      <h3>You can reach me via the links below:</h3>
+      <a class="btn" href="mailto:c.reynolds0108@proton.me">CONTACT ME</a>
     </div>
-    
+  </div>
+  <br>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="www.linkedin.com/in/chad-reynolds-bbaa6a226">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/C_Reynolds0108">Twitter</a>
+    <a class="footer-link" href="https://github.com/creynolds0108">GitHub</a><br>
+    <label for="attributes">Attributes:</label><br>
+    <a href="https://www.flaticon.com/free-icons/linux" title="linux icons">Linux icons created by Freepik - Flaticon</a><br>
+    <a href="https://www.flaticon.com/free-icons/www" title="www icons">Www icons created by Freepik - Flaticon</a>
+    <p class="copywrite">©2022 Chad Reynolds.</p>
+  </div>
