--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <br>
 
     <div class="bottom-container">
-      <a class="footer-link" href="www.linkedin.com/in/chad-reynolds-bbaa6a226">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/chad-reynolds-bbaa6a226/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/C_Reynolds0108">Twitter</a>
       <a class="footer-link" href="https://github.com/creynolds0108">GitHub</a><br>
       <label for="attributes">Attributes:</label><br>
