updated website links

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <br>
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/chad-reynolds-bbaa6a226/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/C_Reynolds0108">Twitter</a>
-      <a class="footer-link" href="https://github.com/creynolds0108">GitHub</a><br>
+      <a class="footer-link" href="https://www.linkedin.com/in/chad-reynolds-bbaa6a226/" target="_blank">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/C_Reynolds0108" target="_blank">Twitter</a>
+      <a class="footer-link" href="https://github.com/creynolds0108" target="_blank">GitHub</a><br>
       <label for="attributes">Attributes:</label><br>
       <a href="https://www.flaticon.com/free-icons/linux" title="linux icons">Linux icons created by Freepik - Flaticon</a><br>
       <a href="https://www.flaticon.com/free-icons/www" title="www icons">Www icons created by Freepik - Flaticon</a>
